Clean up sidebar layout issues.

--- a/app/stylesheets/_layout.scss
+++ b/app/stylesheets/_layout.scss
@@ -1,5 +1,9 @@
 body {
   background: none;
+
+  @include breakpoint(portrait) {
+    padding: 0;
+  };
 }
 
 .page-view {
