--- a/app/stylesheets/_sidebar.scss
+++ b/app/stylesheets/_sidebar.scss
@@ -1,4 +1,27 @@
 .sidebar{
+  width: 320px;
+  position: fixed;
+  top: 47px;
+  left: 40px;
+  bottom: 0;
+  overflow: {
+    y: scroll;
+    x: hidden;
+  }
+  z-index: 99;
+  background: #e9e9e9;
+  @include transition(transform 0.25s);
+  @include translateX(0);
+
+  @include breakpoint(landscape) {
+    width: 290px;
+  }
+
+  @include breakpoint(portrait) {
+    width: 220px;
+    @include translateX(-290px);
+  }
+
   .meta h1,
   .page-header h1{
     font-size: 26px;
